# order-of-the-day-API

./: db.sqlite3  pyproject.toml
drf_todo/: asgi.py  settings.py  urls.py  wsgi.py
todo/: models.py  serializers.py  views.py
todo/migrations/: 0001_initial.py
